--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
-  text-align: center;
+  /* text-align: center;
+  width: 45%; */
+}
+
+.chart {
+  display: flex;
+  justify-content: space-between;
 }
 
 .App-logo {
